assets/stylesheet/tables.css
.table-holder {
    width: 100%;
    max-width: 100%;
    overflow-x: auto;
}

table {
    width: 100%;
    margin: var(--medium-space) 0;
    background: var(--background-colour);
    border: 1px solid var(--background-alt-colour);
    box-shadow: 3px 3px 5px black;
    border-radius: var(--border-radius);
    border-collapse: separate;
}

td {
    padding: var(--small-space);
    font-size: var(--font-size-small);
}

th {
    background-color: var(--background-colour);
    border-bottom: 2px solid var(--accent-colour);
    padding: 0.4em;
    text-align: left;
    font-weight: bold;
    color: var(--text-alt-colour);
    text-transform: uppercase;
    font-family: "Berkeley Mono", monospace;
    font-size: var(--font-size-tiny);
}

tr:nth-child(2n + 1) {
    background-color: var(--background-alt-colour);
}

